objects/UEH_Inbound_Email_Log__c.object
<CustomObject>
    <fields>
        <fullName>Module_Name__c</fullName>
        <label>Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UEH_Email_CC_Addresses__c</fullName>
        <description>Stores the value of CC Address coming from Email.</description>
        <label>Email CC Addresses</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UEH_Email_From_Address__c</fullName>
        <description>Stores the value of From Address from Email.</description>
        <label>Email From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UEH_Email_HTML_Body__c</fullName>
        <description>Store the HTML Body of the Email.</description>
        <label>Email HTML Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UEH_Email_Header__c</fullName>
        <description>Store the value of Header in Email.</description>
        <label>Email Header</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UEH_Email_Html_Body_Is_Truncated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Store value if the HTML Body is get Truncated or not.</description>
        <label>Email Html Body Is Truncated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UEH_Email_Is_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UEH_Email_Message_Id__c</fullName>
        <description>Store the value of the  Message Id from Email.</description>
        <label>Email Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UEH_Email_Plain_Text_Body_Is_Truncated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Store if the Email Plain Text Body is truncated or not.</description>
        <label>Email Plain Text Body Is Truncated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UEH_Email_References__c</fullName>
        <description>Containing the Email Address which it is replying to.</description>
        <label>Email References</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UEH_Email_Reply_To__c</fullName>
        <label>Email Reply To</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UEH_Email_Subject__c</fullName>
        <description>Store the Subject of Email.</description>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UEH_Email_Text_Body__c</fullName>
        <description>Contain the Text body of the email which is send.</description>
        <label>Email Text Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UEH_Email_To_Addresses__c</fullName>
        <description>Stores the Email address of the Receiver.</description>
        <label>Email To Addresses</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UEH_Email_from_Name__c</fullName>
        <description>Stores the value of Sender Name send&apos;s the Email</description>
        <label>Email From Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UEH_Email_in_Reply_To__c</fullName>
        <description>Store the email address of the previous mail to whom it is replying.</description>
        <label>Email In ReplyTo</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UEH_Envelope_From_Address__c</fullName>
        <description>Contains the email Address of the Sender in Envelope.</description>
        <label>Envelope From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UEH_Envelope_To_Address__c</fullName>
        <description>Contain the Email Address of the Receiver.</description>
        <label>Envelope To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UEH_Status__c</fullName>
        <description>Stores the Status of the Email : Accepted and Not Accepted.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UEH Inbound Email Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UEH_Status__c</columns>
        <columns>UEH_Email_HTML_Body__c</columns>
        <columns>UEH_Email_Text_Body__c</columns>
        <columns>UEH_Envelope_To_Address__c</columns>
        <columns>UEH_Email_from_Name__c</columns>
        <columns>UEH_Email_From_Address__c</columns>
        <columns>UEH_Email_Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>UEH_Email_From_Address__c</field>
            <operation>contains</operation>
            <value>sharepoint</value>
        </filters>
        <label>eric</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_UEH</fullName>
        <columns>NAME</columns>
        <columns>UEH_Envelope_From_Address__c</columns>
        <columns>UEH_Email_Subject__c</columns>
        <columns>Module_Name__c</columns>
        <columns>UEH_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All UEH</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IEL-{0000}</displayFormat>
        <label>UEH Inbound Email Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UEH Inbound Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>